methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:21: error: type mismatch;
 found   : Int(1)
 required: java.awt.Color
    case 1 => color = Color.YELLOW
         ^FlowerPot:22: error: type mismatch;
 found   : Int(2)
 required: java.awt.Color
    case 2 => color = Color.GREEN
         ^FlowerPot:23: error: type mismatch;
 found   : Int(3)
 required: java.awt.Color
    case 3 => color = Color.BLUE
         ^FlowerPot:24: error: type mismatch;
 found   : Int(4)
 required: java.awt.Color
    case 4 => color = Color.RED
         ^FlowerPot:25: error: type mismatch;
 found   : Int(5)
 required: java.awt.Color
    case 5 => color = Color.RED
         ^